# RootGameProject

./: .gitignore  CMakeLists.txt  install.sh
json/: projectInfos.json
json/Scenes/: global.json  test.json
scripts/: ForwardParallax.cpp  ForwardParallax.hpp  VasselMovement.cpp  VasselMovement.hpp
src/: main.cpp
